force-app/main/default/objects/Compliance_Data__c/Compliance_Data__c.object-meta.xml
<CustomObject>
    <label>Compliance Data</label>
    <nameField>
        <label>Regulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>