force-app/main/default/objects/Compliance_Data__c/fields/Audit_Findings__c.field-meta.xml
<CustomField>
    <fullName>Audit_Findings__c</fullName>
    <label>Audit Findings</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>