force-app/main/default/objects/Compliance_Data__c/fields/Compliance_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Deadline__c</fullName>
    <label>Compliance Deadline</label>
    <type>Date</type>
</CustomField>