force-app/main/default/objects/Compliance_Data__c/fields/Compliance_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Documentation__c</fullName>
    <label>Compliance Documentation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>