force-app/main/default/objects/Compliance_Data__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-compliant</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>