force-app/main/default/objects/Compliance_Data__c/fields/Date_of_Last_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Audit__c</fullName>
    <label>Date of Last Audit</label>
    <type>Date</type>
</CustomField>